baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_type_throws/baml_tests__diagnostic_errors__function_type_throws__02_parser__positive.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Worker"
    L_BRACE "{"
    FIELD
      WORD "factor"
      TYPE_EXPR "int"
        WORD "int"
    FUNCTION_DEF
      KW_FUNCTION "function"
      WORD "scale"
      PARAMETER_LIST
        L_PAREN "("
        PARAMETER "self"
          WORD "self"
        COMMA ","
        PARAMETER
          WORD "value"
          COLON ":"
          TYPE_EXPR "int"
            WORD "int"
        R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
      EXPR_FUNCTION_BODY
        BLOCK_EXPR
          L_BRACE "{"
          BINARY_EXPR
            PATH_EXPR "self.factor"
              WORD "self"
              DOT "."
              WORD "factor"
            STAR "*"
            WORD "value"
          R_BRACE "}"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "direct"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cb"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            WORD "value"
            COLON ":"
            TYPE_EXPR "int"
              WORD "int"
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "cb"
          CALL_ARGS "(1)"
            L_PAREN "("
            INTEGER_LITERAL "1"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "forward"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cb"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            WORD "value"
            COLON ":"
            TYPE_EXPR "int"
              WORD "int"
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "direct"
          CALL_ARGS "(cb)"
            L_PAREN "("
            WORD "cb"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "chain"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cb"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            WORD "value"
            COLON ":"
            TYPE_EXPR "int"
              WORD "int"
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            PATTERN_ALT "let h"
              KW_LET "let"
              WORD "h"
          EQUALS "="
          WORD "forward"
        CALL_EXPR
          WORD "h"
          CALL_ARGS "(cb)"
            L_PAREN "("
            WORD "cb"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "builtin_map"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cb"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            WORD "value"
            COLON ":"
            TYPE_EXPR "int"
              WORD "int"
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
      COMMA ","
      PARAMETER
        WORD "values"
        COLON ":"
        TYPE_EXPR "int[]"
          WORD "int"
          L_BRACKET "["
          R_BRACKET "]"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int[]"
      WORD "int"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          PATH_EXPR "values.map"
            WORD "values"
            DOT "."
            WORD "map"
          CALL_ARGS "(cb)"
            L_PAREN "("
            WORD "cb"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "member_map"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "worker"
        COLON ":"
        TYPE_EXPR "Worker"
          WORD "Worker"
      COMMA ","
      PARAMETER
        WORD "values"
        COLON ":"
        TYPE_EXPR "int[]"
          WORD "int"
          L_BRACKET "["
          R_BRACKET "]"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int[]"
      WORD "int"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          PATH_EXPR "values.map"
            WORD "values"
            DOT "."
            WORD "map"
          CALL_ARGS
            L_PAREN "("
            PATH_EXPR "worker.scale"
              WORD "worker"
              DOT "."
              WORD "scale"
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
